Changes Auth Token Based Authetication
